Started Classifier II

--- a/classifier/explainable/linreg.ipynb
+++ b/classifier/explainable/linreg.ipynb
@@ -15,22 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'label'\n",
-    "input_column = 'cleanTitle'\n",
+    "input_column = 'cleanText'\n",
     "\n",
-    "train_data = pd.read_pickle('../../../Files/Submissions/train/train_split_submission.pickle') \n",
-    "valid_data = pd.read_pickle('../../../Files/Submissions/train/val_split_submission.pickle')\n",
-    "test_data = pd.read_pickle('../../../Files/Submissions/train/test_split_submission.pickle')\n",
+    "train_data = pd.read_csv('../../../Files/Submissions/train/train2.csv', sep='|') \n",
+    "# valid_data = pd.read_pickle('../../../Files/Submissions/train/val_split_submission.pickle')\n",
+    "test_data = pd.read_csv('../../../Files/Submissions/train/test2.csv', sep='|')\n",
     "\n",
     "train_data = train_data[[target, input_column]]\n",
-    "valid_data = valid_data[[target, input_column]]\n",
+    "# valid_data = valid_data[[target, input_column]]\n",
     "test_data = test_data[[target, input_column]]\n",
     "\n",
-    "data = pd.concat([train_data, valid_data, test_data])\n",
+    "data = pd.concat([train_data,  test_data])\n",
     "\n",
     "\n",
     "train_instances = train_data[input_column].apply(str).apply(str.split)\n",
@@ -79,16 +79,36 @@
     "test_labels_int = [label2int[label] for label in test_labels]\n",
     "\n",
     "# convert dev data\n",
-    "val_instances = valid_data[input_column].apply(str).apply(str.split)\n",
-    "val_labels = valid_data[target]\n",
+    "# val_instances = valid_data[input_column].apply(str).apply(str.split)\n",
+    "# val_labels = valid_data[target]\n",
     "\n",
-    "val_instances_int = convert2ints(val_instances)\n",
-    "val_labels_int = [label2int[label] for label in val_labels]\n"
+    "# val_instances_int = convert2ints(val_instances)\n",
+    "# val_labels_int = [label2int[label] for label in val_labels]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 0])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,12 +121,12 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "train_instances_int = pad_sequences(train_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
     "test_instances_int = pad_sequences(test_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
-    "val_instances_int = pad_sequences(val_instances_int, padding='post', maxlen=MAX_LENGTH)"
+    "# val_instances_int = pad_sequences(val_instances_int, padding='post', maxlen=MAX_LENGTH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69000"
+       "1471"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,16 +164,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jakobschlierf/opt/anaconda3/envs/reddit_env_test/lib/python3.9/site-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "LogisticRegression(random_state=42)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1408474, 15)"
+       "(368, 88)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1408474,)"
+       "(368,)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
