retrained two classifiers on hand labeled dataset

--- a/classifier/explainable/linreg.ipynb
+++ b/classifier/explainable/linreg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'label'\n",
     "input_column = 'cleanText'\n",
     "\n",
-    "train_data = pd.read_csv('../../../Files/Submissions/train/train2.csv', sep='|') \n",
+    "train_data = pd.read_csv('../../../Files/Submissions/train/train1.csv', sep='|') \n",
     "# valid_data = pd.read_pickle('../../../Files/Submissions/train/val_split_submission.pickle')\n",
-    "test_data = pd.read_csv('../../../Files/Submissions/train/test2.csv', sep='|')\n",
+    "test_data = pd.read_csv('../../../Files/Submissions/train/test1.csv', sep='|')\n",
     "\n",
     "train_data = train_data[[target, input_column]]\n",
     "# valid_data = valid_data[[target, input_column]]\n",
@@ -88,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 0])"
+       "array([0., 1.])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1471"
+       "2939"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "LogisticRegression(random_state=42)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
