--- a/classifier/nn/test.ipynb
+++ b/classifier/nn/test.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,22 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'label'\n",
-    "input_column = 'cleanBody'\n",
+    "input_column = 'cleanText'\n",
     "\n",
-    "train_data = pd.read_pickle('../../../Files/Comments/train/train_split_comments.pickle') \n",
-    "valid_data = pd.read_pickle('../../../Files/Comments/train/val_split_comments.pickle')\n",
-    "test_data = pd.read_pickle('../../../Files/Comments/train/test_split_comments.pickle')\n",
+    "train_data = pd.read_csv('../../../Files/Submissions/train/train2.csv', sep='|') \n",
+    "# valid_data = pd.read_pickle('../../../Files/Comments/train/val_split_comments.pickle')\n",
+    "test_data = pd.read_csv('../../../Files/Submissions/train/test2.csv', sep='|')\n",
     "\n",
     "train_data = train_data[[target, input_column]]\n",
-    "valid_data = valid_data[[target, input_column]]\n",
+    "# valid_data = valid_data[[target, input_column]]\n",
     "test_data = test_data[[target, input_column]]\n",
     "\n",
-    "data = pd.concat([train_data, valid_data, test_data])\n",
+    "data = pd.concat([train_data, test_data])\n",
     "\n",
     "\n",
     "train_instances = train_data[input_column].apply(str).apply(str.split)\n",
@@ -421,16 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "300000"
+       "1471"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,25 +452,25 @@
     "test_labels_int = [label2int[label] for label in test_labels]\n",
     "\n",
     "# convert dev data\n",
-    "val_instances = valid_data[input_column].apply(str).apply(str.split)\n",
-    "val_labels = valid_data[target]\n",
+    "# val_instances = valid_data[input_column].apply(str).apply(str.split)\n",
+    "# val_labels = valid_data[target]\n",
     "\n",
-    "val_instances_int = convert2ints(val_instances)\n",
-    "val_labels_int = [label2int[label] for label in val_labels]"
+    "# val_instances_int = convert2ints(val_instances)\n",
+    "# val_labels_int = [label2int[label] for label in val_labels]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 1., 0.], dtype=float32)"
+       "array([0., 0., 1.], dtype=float32)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,26 +480,29 @@
     "\n",
     "train_labels_1hot = to_categorical(train_labels_int, len(label2int))\n",
     "test_labels_1hot = to_categorical(test_labels_int, len(label2int))\n",
-    "val_labels_1hot = to_categorical(val_labels_int, len(label2int))\n",
+    "# val_labels_1hot = to_categorical(val_labels_int, len(label2int))\n",
     "\n",
     "train_labels_1hot[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46\n",
-      "['canadian', 'sheep', 'sheep', 'covid[num', ']', 'vaccine', 'lose'] 7\n",
-      "[10592 67510 67510 15628   191 80643 42801     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0] 46\n"
+      "88\n",
+      "['kansas', 'kdhe', 'report', 'new', 'covid', 'cluster', 'thanksgive', 'variant', 'surge', 'kansas', 'say', 'unvaccinated', 'staff', 'member', 'blame', 'uptick', 'outbreak', 'nursing', 'home'] 19\n",
+      "[2834 2842 4483 3481 1141  910 5286 5704 5157 2834 4665 5608 4997 3204\n",
+      "  567 5627 3731 3608 2417    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0] 88\n"
      ]
     }
    ],
@@ -513,7 +516,7 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "train_instances_int = pad_sequences(train_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
     "test_instances_int = pad_sequences(test_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
-    "val_instances_int = pad_sequences(val_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
+    "# val_instances_int = pad_sequences(val_instances_int, padding='post', maxlen=MAX_LENGTH)\n",
     "\n",
     "print(train_instances[0], len(train_instances[0]))\n",
     "print(train_instances_int[0], len(train_instances_int[0]))"
@@ -521,41 +524,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_2\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " word_IDs (InputLayer)       [(None, 46)]              0         \n",
+      " word_IDs (InputLayer)       [(None, 88)]              0         \n",
       "                                                                 \n",
-      " embedding_2 (Embedding)     (None, 46, 64)            5543104   \n",
+      " embedding (Embedding)       (None, 88, 128)           767360    \n",
       "                                                                 \n",
-      " conv1d_2 (Conv1D)           (None, 46, 64)            12352     \n",
+      " conv1d (Conv1D)             (None, 88, 64)            24640     \n",
       "                                                                 \n",
-      " activation_2 (Activation)   (None, 46, 64)            0         \n",
+      " activation (Activation)     (None, 88, 64)            0         \n",
       "                                                                 \n",
-      " global_max_pooling1d_2 (Glo  (None, 64)               0         \n",
-      " balMaxPooling1D)                                                \n",
+      " global_max_pooling1d (Globa  (None, 64)               0         \n",
+      " lMaxPooling1D)                                                  \n",
       "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 64)                0         \n",
+      " dropout (Dropout)           (None, 64)                0         \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 32)                2080      \n",
+      " dense (Dense)               (None, 32)                2080      \n",
       "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 32)                0         \n",
+      " dropout_1 (Dropout)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 3)                 99        \n",
+      " dense_1 (Dense)             (None, 3)                 99        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5,557,635\n",
-      "Trainable params: 5,557,635\n",
+      "Total params: 794,179\n",
+      "Trainable params: 794,179\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-09-27 15:51:27.665032: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -572,7 +583,7 @@
     "np.random.seed(42)\n",
     "\n",
     "# set parameters of matrices and convolution\n",
-    "embedding_dim = 64\n",
+    "embedding_dim = 128\n",
     "nb_filter = 64\n",
     "filter_length = 3\n",
     "hidden_dims = 32\n",
@@ -606,31 +617,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/8\n",
-      "4688/4688 [==============================] - 221s 47ms/step - loss: 0.2979 - accuracy: 0.8740 - auc: 0.9755 - val_loss: 0.8658 - val_accuracy: 0.7283 - val_auc: 0.8865\n",
-      "Epoch 2/8\n",
-      "4688/4688 [==============================] - 218s 46ms/step - loss: 0.2926 - accuracy: 0.8759 - auc: 0.9763 - val_loss: 0.8885 - val_accuracy: 0.7305 - val_auc: 0.8874\n",
-      "Epoch 3/8\n",
-      "4688/4688 [==============================] - 209s 45ms/step - loss: 0.2883 - accuracy: 0.8777 - auc: 0.9770 - val_loss: 0.8673 - val_accuracy: 0.7345 - val_auc: 0.8865\n",
-      "Epoch 4/8\n",
-      "4688/4688 [==============================] - 181s 39ms/step - loss: 0.2834 - accuracy: 0.8799 - auc: 0.9777 - val_loss: 0.8669 - val_accuracy: 0.7412 - val_auc: 0.8907\n",
-      "Epoch 5/8\n",
-      "4688/4688 [==============================] - 203s 43ms/step - loss: 0.2804 - accuracy: 0.8811 - auc: 0.9782 - val_loss: 0.9407 - val_accuracy: 0.7348 - val_auc: 0.8844\n",
-      "Epoch 6/8\n",
-      "4688/4688 [==============================] - 193s 41ms/step - loss: 0.2760 - accuracy: 0.8827 - auc: 0.9789 - val_loss: 0.9585 - val_accuracy: 0.7381 - val_auc: 0.8859\n",
-      "Epoch 7/8\n",
-      "4688/4688 [==============================] - 188s 40ms/step - loss: 0.2721 - accuracy: 0.8842 - auc: 0.9794 - val_loss: 0.9471 - val_accuracy: 0.7347 - val_auc: 0.8840\n",
-      "Epoch 8/8\n",
-      "4688/4688 [==============================] - 189s 40ms/step - loss: 0.2703 - accuracy: 0.8839 - auc: 0.9797 - val_loss: 0.9368 - val_accuracy: 0.7325 - val_auc: 0.8824\n",
+      "Epoch 1/5\n",
+      "23/23 [==============================] - 3s 18ms/step - loss: 1.0802 - accuracy: 0.4045 - auc: 0.5856\n",
+      "Epoch 2/5\n",
+      "23/23 [==============================] - 0s 18ms/step - loss: 0.9904 - accuracy: 0.4963 - auc: 0.7392\n",
+      "Epoch 3/5\n",
+      "23/23 [==============================] - 0s 21ms/step - loss: 0.8497 - accuracy: 0.6526 - auc: 0.8372\n",
+      "Epoch 4/5\n",
+      "23/23 [==============================] - 1s 22ms/step - loss: 0.6998 - accuracy: 0.7600 - auc: 0.8995\n",
+      "Epoch 5/5\n",
+      "23/23 [==============================] - 0s 21ms/step - loss: 0.5230 - accuracy: 0.8396 - auc: 0.9561\n",
       "\n",
-      "Testing Accuracy:  0.8795\n"
+      "Testing Accuracy:  0.8204\n"
      ]
     }
    ],
@@ -643,9 +648,9 @@
     "                    batch_size=batch_size,\n",
     "                    epochs=epochs,\n",
     "                    verbose=1,\n",
-    "                    validation_data=(val_instances_int, val_labels_1hot)\n",
-    "                   )\n",
-    "\n",
+    "                    )\n",
+    "                   \n",
+    "# validation_data=(val_instances_int, val_labels_1hot\n",
     "loss, accuracy, auc = model.evaluate(test_instances_int, test_labels_1hot,\n",
     "                                batch_size=batch_size,\n",
     "                                verbose=False)\n",
@@ -655,14 +660,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7188/7188 [==============================] - 14s 2ms/step\n"
+      "12/12 [==============================] - 0s 3ms/step\n"
      ]
     }
    ],
@@ -681,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,16 +695,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1408474, 3)"
+       "(368, 3)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,16 +735,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1408474, 28)"
+       "(368, 88)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
