updated performance eval

--- a/classifier/explainable/xgboost_test.ipynb
+++ b/classifier/explainable/xgboost_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1471, 14)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>url</th>\n",
+       "      <th>score</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>permalink</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>Comments</th>\n",
+       "      <th>cleanText</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>164</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>0</td>\n",
+       "      <td>426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>121</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>619</td>\n",
+       "      <td>2</td>\n",
+       "      <td>619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>121</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>426</td>\n",
+       "      <td>0</td>\n",
+       "      <td>426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  text  url  score  title  author  selftext  permalink  subreddit  \\\n",
+       "label                                                                         \n",
+       "0      426   426  426    426    426     426       164        426        426   \n",
+       "1      619   619  619    619    619     619       121        619        619   \n",
+       "2      426   426  426    426    426     426       121        426        426   \n",
+       "\n",
+       "       created_utc  num_comments  Comments  cleanText  \n",
+       "label                                                  \n",
+       "0              426           426         0        426  \n",
+       "1              619           619         2        619  \n",
+       "2              426           426         0        426  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +225,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(368, 14)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 0.], dtype=float32)"
+       "array([0., 0., 1.], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,20 +345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67\n",
-      "['know', 'video', 'north', 'tower', 'hit', 'flight', '[', 'NUM', ']', 'hd'] 10\n",
-      "[4201 8334 5158 7857 3517 2884   27    2   28 3416    0    0    0    0\n",
+      "88\n",
+      "['kansas', 'kdhe', 'report', 'new', 'covid', 'cluster', 'thanksgive', 'variant', 'surge', 'kansas', 'say', 'unvaccinated', 'staff', 'member', 'blame', 'uptick', 'outbreak', 'nursing', 'home'] 19\n",
+      "[2834 2842 4483 3481 1141  910 5286 5704 5157 2834 4665 5608 4997 3204\n",
+      "  567 5627 3731 3608 2417    0    0    0    0    0    0    0    0    0\n",
       "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
       "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
       "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
-      "    0    0    0    0    0    0    0    0    0    0    0] 67\n"
+      "    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "    0    0    0    0] 88\n"
      ]
     }
    ],
@@ -207,19 +382,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2939\n"
+      "368\n"
      ]
     }
    ],
    "source": [
-    "print(len(train_instances_int)) "
+    "print(len(test_instances_int)) "
    ]
   },
   {
@@ -2938,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3476,6 +3651,60 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load('xgbBest_CVC2.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = model.predict_proba(test_instances_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test.tofile('../../../Files/models/xgboostC2.txt', sep=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2743, 2)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.shape"
+   ]
   }
  ],
  "metadata": {
