created extended dataset

--- a/classifier/evaluate_performance.ipynb
+++ b/classifier/evaluate_performance.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "(368, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,18 +596,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.utils import to_categorical\n",
-    "\n",
     "tests_1hot = to_categorical(y_pred )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -616,13 +614,48 @@
        "(368, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tests_1hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 0., 1.],\n",
+       "       ...,\n",
+       "       [1., 0., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 1., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tests_1hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_conf = pd.read_csv('../../Files/models/Roberta_C2.csv', sep='|')['conf_1']"
    ]
   },
   {
