--- a/classifier/nn/bert_base_cased_eval.ipynb
+++ b/classifier/nn/bert_base_cased_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,34 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "model = AutoModelForSequenceClassification.from_pretrained('../../../Files/models/ROBERTA_base/Posts/Fully2/checkpoint-920')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "data = load_dataset(\"imdb\", split=\"test[:2]\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "task_evaluator = evaluator(\"text-classification\")"
+    "model = AutoModelForSequenceClassification.from_pretrained('../../../Files/models/ROBERTA_base/Posts/Fully3/checkpoint-462')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = pd.read_csv('../../../Files/Submissions/train/test2.csv', sep='|')\n",
+    "test = pd.read_csv('../../../Files/Submissions/train/test2_v2.csv', sep='|')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,27 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'accuracy': {'confidence_interval': (0.6573205052453982, 0.7293239762970907),\n",
-       "  'standard_error': 0.023095161824177382,\n",
-       "  'score': 0.6929347826086957},\n",
-       " 'total_time_in_seconds': 2.629261080059223,\n",
-       " 'samples_per_second': 139.9632781966677,\n",
-       " 'latency_in_seconds': 0.007144731195813107}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results"
+    "results = myclassifier(data['cleanText'])"
    ]
   },
   {
@@ -189,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,31 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.to_csv('../../../Files/Submissions/train/Roberta_C2.csv', sep='|')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.004671997635942203"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "6577 / len(length)"
+    "test.to_csv('../../../Files/Submissions/train/Roberta_C2_v2.csv', sep='|')"
    ]
   },
   {
